# serialtest

./: .gitmodules  CMakeLists.txt  README.md  config.yaml
include/: SerialManager.h
src/: SerialManager.cpp  main.cpp
